[package]
name = "hcsro4-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

[dependencies.embassy-executor]
version = "0.5.0"
features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-8192",
]

[dependencies.embassy-stm32]
version = "0.1.0"
features = [
    "defmt",
    "exti",
    "memory-x",
    "stm32f411re",
    "time-driver-any",
]

[dependencies.futures-util]
version = "0.3.30"
default-features = false
features = ["async-await", "async-await-macro"]
